[package]
name = "cuid2-rs"
version = "0.1.0"
edition = "2024"
description = "Collision-resistant unique ids."
license = "MIT"
authors = ["OnlyF0uR"]
homepage = "https://github.com/OnlyF0uR/cuid2"
repository = "https://github.com/OnlyF0uR/cuid2"
readme = "README.md"

[dependencies]
sha3 = "0.10.8"
rand = "0.9.0"
rand_chacha = "0.9.0"
hex = "0.4.3"
